# ofxPluginTemplate

./: .travis.yml  CMakeLists.txt  README.md  createPlugin.py
plugin/: basic.cpp
src/: PLUGIN_NAMEInteract.cpp  PLUGIN_NAMEInteract.hpp  PLUGIN_NAMEPlugin.cpp
